--- a/src/App.css
+++ b/src/App.css
@@ -6,10 +6,12 @@
 } */
 
 * {
+  max-width: 3000px;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   text-align: center;
+  color: black;
 }
 
 html, body, #root {
@@ -17,4 +19,12 @@ html, body, #root {
   overflow-x: hidden;
   /* font-family: 'Inter', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji'; */
   /* background-color: var(--colorAqua); */
+}
+
+.large-menu-item {
+  padding: 0 6px;
+}
+
+.large-menu-item:hover {
+  border-bottom: 2px solid black;
 }
