--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,13 @@
 } */
 
 * {
-  max-width: 3000px;
+  max-width: 100%;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   text-align: center;
-  color: black;
+  /* color: black; */
+  color:#676634
 }
 
 html, body, #root {
